--- a/source/DR_HostManager/DR_HostManager.vcxproj.filters
+++ b/source/DR_HostManager/DR_HostManager.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClInclude Include="DR_HostManager.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="DR_ResoruceUnpacker.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="DR_HostManagerInternal.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DR_HostManager.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="DR_ResoruceUnpacker.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="DR_HostManagerInternal.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
