--- a/source/DR_NaitiveHost/DR_NaitiveHost.vcxproj.filters
+++ b/source/DR_NaitiveHost/DR_NaitiveHost.vcxproj.filters
@@ -15,27 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DR_PEExecutor.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="DR_DefaultPEExecutor.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\include\DR_PEExecutor.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="DR_DefaultPEExecutor.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="DR_ExecFuncWraps.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <MASM Include="DR_ExecFuncWrapsX64.asm">
-      <Filter>Исходные файлы</Filter>
-    </MASM>
   </ItemGroup>
 </Project>
